--- a/shopping-list/index.html
+++ b/shopping-list/index.html
@@ -11,13 +11,13 @@
 
     <h1>My shopping list</h1>
 
-    <div>
-      <label for="item">Enter a new item:</label>
-      <input type="text" name="item" id="item">
-      <button>Add item</button>
+    <div class="container">
+        <label for="item">Enter a new item:</label>
+        <input type="text" name="item" id="item">
+        <button onclick="pushItem()">Add item</button>
     </div>
 
-    <ul>
+    <ul id="shoppingList">
 
     </ul>
 
